# gingerbread

./: Cargo.toml
crates/arena/src/: id.rs  id_range.rs  lib.rs  map.rs
crates/arena/src/id_range/: builder.rs
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  validation.rs
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/eval/: Cargo.toml
crates/eval/src/: codegen.rs  lib.rs
crates/eventree/: Cargo.toml
crates/eventree/src/: node.rs  token.rs  tree.rs
crates/gb/: Cargo.toml
crates/gb-server/: Cargo.toml
crates/gb-server/src/: capabilities.rs  lib.rs  main.rs
crates/gb/src/: capabilities.rs  main.rs
crates/hir/: Cargo.toml
crates/hir/src/: body.rs  index.rs  index_diff.rs  lib.rs  nameres.rs  project.rs  summary.rs  world_index.rs
crates/hir_lower/: Cargo.toml
crates/hir_lower/src/: lib.rs  summary.rs
crates/hir_ty/: Cargo.toml
crates/hir_ty/src/: lib.rs
crates/ide/: Cargo.toml
crates/ide/src/: lib.rs
crates/interner/: Cargo.toml
crates/interner/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/line_index/: Cargo.toml
crates/line_index/src/: lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: connection.rs  lib.rs  model.rs  proto.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  tests.rs  token_set.rs
crates/parser/src/grammar/: def.rs  expr.rs  path.rs  statement.rs  ty.rs
crates/parser/src/grammar/def/: fnc_def.rs  function.rs  record.rs
crates/parser/src/parser/: marker.rs
crates/parser/src/tests/repl_line/: 2_local_defs.test  3_exprs.test  addition_and_multiplication.test  bin_expr_with_broken_lhs.test  bin_expr_with_broken_rhs.test  bin_expr_without_rhs.test  binary_expr_with_broken_lhs.test  binary_expr_with_broken_rhs.test  block_closed_by_wrong_delimiter.test  block_grouping_addition_and_multiplication.test  block_interrupted_by_fnc_def.test  block_interrupted_by_function.test  block_with_local_def.test  block_with_one_expr.test  block_with_statements.test  block_with_stmts.test  block_with_unclosed_brace.test  broken_local_defs.test  call_and_int_literal_subtraction.test  call_with_multiple_args.test  call_with_nested_path.test  call_with_nested_path_missing_function_name.test  call_with_no_args.test  call_with_one_arg.test  call_with_one_arg_and_trailing_comma.test  call_with_whitespace.test  comments.test  division_and_subtraction.test  dont_eat_tokens_on_missing_semicolons.test  double_semicolon.test  empty_block.test  empty_record.test  empty_string_literal.test  extra_right_braces.test  fnc_call_and_int_literal_subtraction.test  fnc_call_with_multiple_args.test  fnc_call_with_whitespace.test  fnc_def.test  fnc_def_interrupted_by_local_def.test  fnc_def_missing_everything_with_brace.test  (+76 more)
crates/parser/src/tests/source_file/: double_semicolon.test  fnc_defs.test  functions.test  statements_not_allowed_at_top_level.test  stmts_not_allowed_at_top_level.test  unmatched_brace.test
crates/parser_bench/: Cargo.toml
crates/parser_bench/src/: main.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: element.rs  kind.rs  lib.rs  node.rs  token.rs  tree.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
crates/unnamed-server/: Cargo.toml
crates/unnamed-server/src/: lib.rs  line_index.rs  main.rs
crates/unnamed-server/src/lsp/: connection.rs  proto.rs
crates/unnamedc/: Cargo.toml
crates/unnamedc/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
fuzz/: Cargo.toml
fuzz/corpus/main/: example
fuzz/fuzz_targets/: main.rs
src/: main.rs
unnamed-server/: Cargo.toml
unnamed-server/src/: lsp.rs  main.rs
unnamed-server/src/lsp/: connection.rs  model.rs  proto.rs
unnamed-vscode/: language-configuration.json  package-lock.json  package.json
unnamed-vscode/src/: extension.ts
unnamedc/: Cargo.toml
unnamedc/crates/arena/: Cargo.toml
unnamedc/crates/arena/src/: lib.rs  map.rs
unnamedc/crates/arena/src/id_range/: builder.rs
unnamedc/crates/ast/: Cargo.toml
unnamedc/crates/ast/src/: lib.rs  validation.rs
unnamedc/crates/errors/: Cargo.toml
unnamedc/crates/errors/src/: lib.rs
unnamedc/crates/eval/: Cargo.toml
unnamedc/crates/eval/src/: lib.rs
unnamedc/crates/hir/: Cargo.toml
unnamedc/crates/hir/src/: lib.rs
unnamedc/crates/hir_lower/: Cargo.toml
unnamedc/crates/hir_lower/src/: lib.rs
unnamedc/crates/hir_ty/: Cargo.toml
unnamedc/crates/hir_ty/src/: lib.rs
unnamedc/crates/lexer/: Cargo.toml
unnamedc/crates/lexer/src/: lib.rs
unnamedc/crates/parser/: Cargo.toml
unnamedc/crates/parser/src/: error.rs  event.rs  grammar.rs  lib.rs  marker.rs  parser.rs  sink.rs  tests.rs  token_set.rs
unnamedc/crates/parser/src/grammar/: expr.rs  stmt.rs  ty.rs
unnamedc/crates/parser/src/grammar/def/: fnc_def.rs
unnamedc/crates/parser/src/grammar/stmt/: fnc_def.rs
unnamedc/crates/parser/src/parser/: expected_name_guard.rs  expected_syntax_name_guard.rs  marker.rs
unnamedc/crates/parser/src/tests/repl_line/: 2_local_defs.test  3_exprs.test  addition_and_multiplication.test  bin_expr_with_broken_lhs.test  block_closed_by_wrong_delimiter.test  block_grouping_addition_and_multiplication.test  block_interrupted_by_fnc_def.test  block_with_extra_semicolons.test  block_with_local_def.test  empty_block.test  (+54 more)
unnamedc/crates/syntax/: Cargo.toml
unnamedc/crates/syntax/src/: lib.rs
unnamedc/crates/token/: Cargo.toml
unnamedc/crates/token/src/: lib.rs
unnamedc/crates/unnamedc/: Cargo.toml
unnamedc/crates/unnamedc/src/: main.rs
unnamedc/fuzz/: Cargo.toml
unnamedc/fuzz/corpus/main/: example
unnamedc/fuzz/fuzz_targets/: main.rs
unnamedc/src/: lexer.rs  lib.rs  main.rs  parser.rs  syntax.rs
unnamedc/src/parser/: event.rs  marker.rs  sink.rs
unnamedvm/: Cargo.toml
unnamedvm/src/: instruction_set.rs  lib.rs  main.rs
vscode/: gingerbread.tmLanguage.json  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts
(+31 files in other folders)
