[workspace]
members = [
  "crates/arena",
  "crates/ast",
  "crates/diagnostics", #   "crates/eval",
  "crates/gen",
  "crates/hir",
  "crates/lexer",
  "crates/line_index",
  "crates/lsp",
  "crates/parser",
  "crates/parser_bench",
  "crates/syntax",
  "crates/token",
  "crates/gb-server", #   "crates/gb",
]

[profile.release]
lto = "thin"
