[workspace]
members = [
  "crates/arena",
  "crates/ast",
  "crates/diagnostics", #   "crates/eval",
  "crates/gb-server", #   "crates/gb",
  "crates/gen",
  "crates/hir",
  "crates/hir_ty",
  "crates/lexer",
  "crates/line_index",
  "crates/lsp",
  "crates/parser",
  "crates/parser_bench",
  "crates/syntax",
  "crates/token",
  "crates/utils",
]

[profile.release]
lto = "thin"
