[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "unnamed-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
lexer = {path = "../unnamedc/crates/lexer"}
lsp-server = "0.5.2"
lsp-types = "0.91.1"
serde = "1.0"
serde_json = "1.0"
text-size = "1.1"
token = {path = "../unnamedc/crates/token"}
