[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bench"
version = "0.0.0"

[dependencies]
ast = {path = "../ast"}
eval = {path = "../eval"}
gen = {path = "../gen"}
hir = {path = "../hir"}
hir_ty = {path = "../hir_ty"}
interner = {path = "../interner"}
lexer = {path = "../lexer"}
mimalloc = {version = "0.1.27", default-features = false}
parser = {path = "../parser"}
rustc-hash = "1.1"
