[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "diagnostics"
version = "0.0.0"

[dependencies]
ast = {path = "../ast"}
hir = {path = "../hir"}
hir_ty = {path = "../hir_ty"}
line_index = {path = "../line_index"}
parser = {path = "../parser"}
text-size = "1.1"
token = {path = "../token"}

[dev-dependencies]
expect-test = "1.1"
