[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "diagnostics"
version = "0.0.0"

[dependencies]
ast = {path = "../ast"}
hir = {path = "../hir"}
hir_ty = {path = "../hir_ty"}
interner = {path = "../interner"}
line_index = {path = "../line_index"}
parser = {path = "../parser"}
syntax = {path = "../syntax"}
text-size = "1.1"

[dev-dependencies]
expect-test = "1.1"
