[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "eval"
version = "0.0.0"

[dependencies]
arena = {path = "../arena"}
hir = {path = "../hir"}

[dev-dependencies]
ast = {path = "../ast"}
hir_lower = {path = "../hir_lower"}
hir_ty = {path = "../hir_ty"}
lexer = {path = "../lexer"}
parser = {path = "../parser"}
