[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "eval"
version = "0.0.0"

[dependencies]
arena = {path = "../arena"}
hir = {path = "../hir"}
hir_ty = {path = "../hir_ty"}
rustc-hash = "1.1"
wasm-encoder = "0.9.0"
wasmtime = "0.34.0"

[dev-dependencies]
ast = {path = "../ast"}
expect-test = "1.1"
interner = {path = "../interner"}
lexer = {path = "../lexer"}
parser = {path = "../parser"}
utils = {path = "../utils"}
