[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "gb-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
ast = {path = "../ast"}
diagnostics = {path = "../diagnostics"}
hir = {path = "../hir"}
hir_ty = {path = "../hir_ty"}
lexer = {path = "../lexer"}
line_index = {path = "../line_index"}
lsp = {path = "../lsp"}
lsp-types = "0.91.1"
mimalloc = {version = "0.1.27", default-features = false}
parser = {path = "../parser"}
text-size = "1.1"
token = {path = "../token"}
