[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "gb"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
ast = {path = "../ast"}
crossterm = "0.21.0"
diagnostics = {path = "../diagnostics"}
eval = {path = "../eval"}
hir = {path = "../hir"}
hir_lower = {path = "../hir_lower"}
hir_ty = {path = "../hir_ty"}
lexer = {path = "../lexer"}
line_index = {path = "../line_index"}
mimalloc = {version = "0.1.27", default-features = false}
parser = {path = "../parser"}
token = {path = "../token"}
