[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "gb"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
diagnostics = {path = "../diagnostics"}
ide = {path = "../ide"}
line_index = {path = "../line_index"}
lsp = {path = "../lsp"}
lsp-types = "0.91.1"
mimalloc = {version = "0.1.27", default-features = false}
text-size = "1.1"
