[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "hir"
version = "0.0.0"

[dependencies]
arena = {path = "../arena"}
ast = {path = "../ast"}
interner = {path = "../interner"}
syntax = {path = "../syntax"}
text-size = "1.1"
thiserror = "1.0"

[dev-dependencies]
expect-test = "1.1"
lexer = {path = "../lexer"}
parser = {path = "../parser"}
utils = {path = "../utils"}
