[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "hir_lower"
version = "0.0.0"

[dependencies]
arena = {path = "../arena"}
ast = {path = "../ast"}
hir = {path = "../hir"}
text-size = "1.1"

[dev-dependencies]
expect-test = "1.1"
lexer = {path = "../lexer"}
parser = {path = "../parser"}
pretty_assertions = "1.0"
