[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "hir_ty"
version = "0.0.0"

[dependencies]
arena = {path = "../arena"}
hir = {path = "../hir"}
interner = {path = "../interner"}
rustc-hash = "1.1"
text-size = "1.1"

[dev-dependencies]
ast = {path = "../ast"}
expect-test = "1.1"
interner = {path = "../interner"}
lexer = {path = "../lexer"}
parser = {path = "../parser"}
utils = {path = "../utils"}
