[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "unnamed-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
lexer = {path = "../lexer"}
lsp-types = "0.91.1"
parser = {path = "../parser"}
serde = "1.0"
serde_json = "1.0"
text-size = "1.1"
thiserror = "1.0"
token = {path = "../token"}
