[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "unnamed-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
errors = {path = "../errors"}
lexer = {path = "../lexer"}
line_index = {path = "../line_index"}
lsp = {path = "../lsp"}
lsp-types = "0.91.1"
parser = {path = "../parser"}
text-size = "1.1"
token = {path = "../token"}
