[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "errors"
version = "0.0.0"

[dependencies]
ast = {path = "../ast"}
hir = {path = "../hir"}
hir_lower = {path = "../hir_lower"}
hir_ty = {path = "../hir_ty"}
parser = {path = "../parser"}
text-size = "1.1"
token = {path = "../token"}

[dev-dependencies]
expect-test = "1.1"
