[package]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "unnamedc"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
ast = {path = "../ast"}
crossterm = "0.21.0"
eval = {path = "../eval"}
hir_lower = {path = "../hir_lower"}
hir_ty = {path = "../hir_ty"}
lexer = {path = "../lexer"}
parser = {path = "../parser"}
token = {path = "../token"}
