[package]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "unnamedc"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
ast = {path = "../ast"}
crossterm = "0.21.0"
errors = {path = "../errors"}
eval = {path = "../eval"}
hir = {path = "../hir"}
hir_lower = {path = "../hir_lower"}
hir_ty = {path = "../hir_ty"}
la-arena = "0.2.1"
lexer = {path = "../lexer"}
parser = {path = "../parser"}
token = {path = "../token"}
